--- a/bbresume/css/style.css
+++ b/bbresume/css/style.css
@@ -96,7 +96,7 @@ header .top_header .logo span::before {
   top: -5px;
 }
 header .top_header .btn {
-  margin-left: 110px;
+  margin-left: 105px;
   display: inline-block;
 }
 header .top_header .btn p {
@@ -343,8 +343,11 @@ header .top_header .phone a:hover {
   font-size: 16px;
   color: #fefefe;
   margin-top: 30px;
+  transition: all 0.3s;
 }
-
+.resume_writing .order_now button:hover {
+  opacity: 0.5;
+}
 .header_img {
   background-image: url(../img/header-banner.jpg);
   background-repeat: no-repeat;
@@ -352,7 +355,7 @@ header .top_header .phone a:hover {
   background-size: cover;
   width: 100%;
   text-align: center;
-  padding: 180px 0;
+  padding: 100px 0;
 }
 .header_img h1 {
   max-width: 470px;
@@ -464,15 +467,12 @@ header .top_header .phone a:hover {
   text-transform: uppercase;
   right: -30px;
 }
-.bottom_line ul li a {
+.bottom_line ul li {
   color: #fff;
   font-size: 16px;
   text-transform: uppercase;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-}
-.bottom_line ul li a:hover {
-  opacity: 0.5;
 }
 
 .writers_essay {
@@ -571,7 +571,7 @@ header .top_header .phone a:hover {
   list-style: none;
   padding-left: 30px;
   font-size: 15px;
-  color: #c8c8c8;
+  color: #8b8c8c;
   margin-bottom: 10px;
   position: relative;
 }
@@ -934,6 +934,11 @@ header .top_header .phone a:hover {
   color: #fbfdff;
   margin: 0 auto;
   margin-top: 50px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.resume_info button:hover {
+  opacity: 0.5;
 }
 
 .breadcrumb {
@@ -961,6 +966,10 @@ header .top_header .phone a:hover {
   font-size: 12px;
   color: #29525b;
   text-decoration: underline;
+  transition: all 0.3s;
+}
+.breadcrumb li a:hover {
+  opacity: 0.5;
 }
 .breadcrumb .active a {
   text-decoration: none;
@@ -1010,6 +1019,9 @@ header .top_header .phone a:hover {
   position: relative;
   padding: 5px;
 }
+.popupimg {
+  outline: none;
+}
 .sample .sample_box .sample_resume_slider .item_img img {
   width: 100%;
   max-width: 194px;
@@ -1058,6 +1070,10 @@ header .top_header .phone a:hover {
   font-size: 15px;
   color: #047aff;
   margin-top: 30px;
+  transition: all 0.3s;
+}
+.sample .sample_box .btn:hover {
+  opacity: 0.5;
 }
 
 .reviews {
@@ -1149,8 +1165,11 @@ header .top_header .phone a:hover {
   color: #29525b;
   text-align: center;
   margin-top: 40px;
+  transition: all 0.3s;
 }
-
+.reviews a:hover {
+  opacity: 0.5;
+}
 footer {
   padding: 70px 0px 50px 0px;
   background-color: #fff;
