--- a/gamerX/assets/css/main.css
+++ b/gamerX/assets/css/main.css
@@ -22,6 +22,11 @@ body {
   overflow-x: hidden;
 }
 
+.slick-initialized .slick-slide {
+  display: block;
+  outline: none;
+}
+
 .container {
   width: 100%;
   max-width: 1200px;
