--- a/asl/scss/main.scss
+++ b/asl/scss/main.scss
@@ -997,8 +997,9 @@ button {
       justify-content: center;
       align-items: center;
       padding-left: 0;
-      width: 219px;
-      height: 54px;
+      width: 100%;
+      max-width: 292px;
+      height: 53px;
       border: 1px solid #e13b31;
       color: #e13b31;
       font-size: 14px;
@@ -1007,7 +1008,6 @@ button {
       transition: all 0.5s;
       background: #fff;
       margin-top: 10px;
-      margin-left: 21%;
       border-radius: 25px;
       &:hover {
         background: #e13b31;
@@ -1298,6 +1298,31 @@ button {
       }
     }
   }
+  .header {
+    padding: 10px 0;
+    &__logo {
+      p {
+        font-size: 16px;
+      }
+      a {
+        img {
+          width: 100px;
+        }
+      }
+    }
+    &__phone {
+      a {
+        font-size: 20px;
+        &:last-child {
+          font-size: 16px;
+        }
+      }
+      .callback {
+        width: 180px;
+        height: 40px;
+      }
+    }
+  }
 }
 .lb-outerContainer {
   border: none;
@@ -1340,6 +1365,16 @@ button {
 @media (max-width: 1180px) {
   .catalog__item {
     margin-right: 45px;
+  }
+}
+@media (max-width: 1179px) {
+  .advantages__item:nth-child(3) span {
+    bottom: auto;
+    top: -50px;
+  }
+  .advantages__item:nth-child(4) span {
+    bottom: auto;
+    top: -40px;
   }
 }
 @media (max-width: 1160px) {
@@ -1578,6 +1613,20 @@ button {
   }
 }
 @media (max-width: 619px) {
+  .scroll-menu {
+    //.header__logo {
+    //  display: none;
+    //}
+    //.header__phone {
+    //  display: none;
+    //}
+    .header {
+      display: none;
+    }
+  }
+  .mob__menu {
+    margin-top: 0;
+  }
   .header__logo {
     align-items: center;
     width: 100px;
