--- a/oil-buy/assets/css/main.css
+++ b/oil-buy/assets/css/main.css
@@ -23,7 +23,7 @@
 
 a {
   text-decoration: none;
-  color: #fcda3d;
+  color: #2d2d2d;
   cursor: pointer;
 }
 
@@ -82,10 +82,8 @@ button,
 }
 
 .section-1 {
-  background-image: url(../images/bg-black.png);
-  background-repeat: repeat-y;
-  background-size: cover;
-  background-position: center top;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#eaad29), to(#f3d448));
+  background-image: linear-gradient(to top, #eaad29 0%, #f3d448 100%);
 }
 .section-1 .container {
   display: -webkit-box;
@@ -97,19 +95,12 @@ button,
 }
 .section-1__title h1 {
   font-size: 48px;
-  color: #fcda3d;
-  background: -webkit-gradient(linear, left bottom, left top, from(#f6c031), to(#fff05f));
-  background: linear-gradient(to top, #f6c031 0%, #fff05f 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #2d2d2d;
   line-height: 55px;
   font-family: "HelveticaNeueCyr-Medium", sans-serif;
 }
 .section-1__title h3 {
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#f6c031), to(#fff05f));
-  background-image: linear-gradient(to top, #f6c031 0%, #fff05f 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #2d2d2d;
   font-family: "HelveticaNeueCyr-Roman", sans-serif;
   font-size: 20px;
   margin-top: 10px;
@@ -118,12 +109,16 @@ button,
   margin-top: 40px;
   line-height: 30px;
   font-size: 24px;
-  color: #f8f5e7;
+  color: #2d2d2d;
   margin-bottom: 70px;
+}
+.section-1__title button {
+  -webkit-box-shadow: 0 5px 5px 1px #6a4b03;
+          box-shadow: 0 5px 5px 1px #6a4b03;
 }
 .section-1__img {
   width: 100%;
-  max-width: 630px;
+  max-width: 660px;
   margin-left: 20px;
 }
 .section-1__img img {
@@ -167,6 +162,8 @@ button,
   margin-bottom: -20px;
   -webkit-animation: up-down 2s infinite;
           animation: up-down 2s infinite;
+  -webkit-box-shadow: 0 0 17px 7px rgba(119, 83, 6, 0.25);
+          box-shadow: 0 0 17px 7px rgba(119, 83, 6, 0.25);
 }
 @-webkit-keyframes up-down {
   0% {
@@ -214,7 +211,7 @@ button,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: #fcda3d;
+  color: #2d2d2d;
   font-family: "HelveticaNeueCyr-Medium", sans-serif;
   line-height: 22px;
 }
@@ -236,7 +233,7 @@ button,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: #fcda3d;
+  color: #2d2d2d;
   font-family: "HelveticaNeueCyr-Medium", sans-serif;
   line-height: 22px;
 }
@@ -255,7 +252,7 @@ button,
 }
 .header__phone {
   position: relative;
-  color: #fcda3d;
+  color: #2d2d2d;
   font-family: "HelveticaNeueCyr-Medium", sans-serif;
   line-height: 22px;
 }
@@ -281,6 +278,8 @@ button,
 .header__callback button {
   width: 100%;
   max-width: 200px;
+  -webkit-box-shadow: 0 5px 5px 1px #6a4b03;
+          box-shadow: 0 5px 5px 1px #6a4b03;
 }
 
 .navbar {
@@ -430,7 +429,8 @@ button,
 }
 
 .about {
-  background-color: #f3d448;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#eaad29), to(#f3d448));
+  background-image: linear-gradient(to top, #eaad29 0%, #f3d448 100%);
   padding-top: 60px;
   padding-bottom: 80px;
 }
@@ -492,13 +492,65 @@ button,
   text-align: center;
   font-family: "HelveticaNeueCyr-Medium", sans-serif;
 }
-.price__row {
-  width: 100%;
-  max-width: 830px;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#f6c031), to(#fff05f));
-  background-image: linear-gradient(to top, #f6c031 0%, #fff05f 100%);
+.price__block {
   margin: 0 auto;
-  border-bottom: 1px solid #732a00;
+  width: 100%;
+  padding: 50px 10px;
+  max-width: 827px;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#eaad29), to(#f3d448));
+  background-image: linear-gradient(to top, #eaad29 0%, #f3d448 100%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+.price__block h3 {
+  font-size: 24px;
+  color: #000000;
+  font-family: "HelveticaNeueCyr-Medium", sans-serif;
+  margin-bottom: 30px;
+}
+.price__block span {
+  font-size: 18px;
+  color: #2d2d2d;
+  font-family: "HelveticaNeueCyr-Medium", sans-serif;
+  position: relative;
+}
+.price__block span:before {
+  content: '';
+  display: block;
+  background-image: url(../images/arrows.png);
+  width: 373px;
+  height: 81px;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-54%);
+          transform: translateX(-54%);
+  top: 20px;
+}
+.price__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.price__item {
+  margin: 0 50px;
+  margin-top: 70px;
+}
+.price__item:nth-child(2) {
+  margin-top: 50px;
+}
+.price__item i {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -508,41 +560,32 @@ button,
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 60px;
-  font-size: 24px;
-  color: #000;
+  width: 110px;
+  height: 110px;
+  background-color: #333333;
+  border-radius: 50%;
+}
+.price__item p {
+  color: #2d2d2d;
   font-family: "HelveticaNeueCyr-Medium", sans-serif;
-}
-.price .row-1 {
-  height: 90px;
-}
-.price .row-3 {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 0 137px;
-}
-.price__address {
-  width: 100%;
-  max-width: 830px;
-  margin: 0 auto;
+  font-size: 18px;
   margin-top: 20px;
-  font-size: 17px;
-  font-family: "HelveticaNeueCyr-Medium", sans-serif;
-  color: #f8f5e7;
 }
 .price__text {
+  text-align: center;
+  margin-top: 50px;
+}
+.price__text h3 {
+  color: #2d2d2d;
   font-family: "HelveticaNeueCyr-Medium", sans-serif;
-  width: 100%;
-  max-width: 830px;
-  margin: 0 auto;
-  margin-top: 30px;
-  font-size: 17px;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#f6c031), to(#fff05f));
-  background-image: linear-gradient(to top, #f6c031 0%, #fff05f 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  line-height: 22px;
+  font-size: 24px;
+}
+.price__text p {
+  color: #2d2d2d;
+  font-family: "HelveticaNeueCyr-Medium", sans-serif;
+  font-size: 18px;
+  margin-top: 20px;
+  margin-top: 25px;
 }
 
 .offer {
@@ -667,6 +710,9 @@ button,
       -ms-flex-direction: column;
           flex-direction: column;
   line-height: 22px;
+}
+.footer__phone a {
+  color: #fcda3d;
 }
 .footer__phone i {
   margin-right: 5px;
@@ -1069,6 +1115,35 @@ button,
 
   .mob-contacts .header__time {
     margin: 20px 0;
+  }
+
+  .price__block span:before {
+    display: none;
+  }
+
+  .price__item {
+    margin: 0 auto;
+    margin-top: 50px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .price__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 @media (max-width: 500px) {
